# swq

./: Cargo.toml  readme.md
src/: a6_to_a4.tex  main.rs  md_index.rs  md_to_model.rs  model.rs  model_to_lex.rs
vragen/: index.md
vragen/001-lucht/: 001-liniaal.md  002-luchtweerstand.md  003-loden-bal.md  004-haardroger.md  005-telefoon-aluminiumfolie.md  006-sate-prikker.md  007-papier.md
vragen/002-droogijs/: 001-water.md
vragen/003-lichaam/: 001-welpenpas.md  002-welpenpet.md  003-kracht-petfles.md  004-trekkracht.md  005-kijk-en-draaien.md  006-bierflesje.md  007-kaars.md  008-A4tje.md  009-wip-wap.md  010-lepel.md  011-rietje-drinken.md  012-getal.md  013-draaistoel.md  014-zien.md  015-singer.md  016-vierkante-rond.md  017-condoom.md
vragen/004-eten/: 001-cola.md
vragen/005-water/: 001-petfles-lek.md  002-dichtheid-zout.md  003-petfles-waterdamp.md  004-olie.md  005-olie-zout.md  006-olie-zout-afwasmiddel.md  007-kaars.md  008-verbonden.md  009-verbonden-zuigen.md  010-lood.md  012-bierflesje-drijven.md  013-archimedes.md  014-beker.md  015-bruistablet.md  016-skittles.md  017-wegspoelem.md
vragen/006-vuur/: 001-oli-en-water.md  001-olie-en-water.md  002-melkpoeder.md  003-melkpak-tegel-rotje.md  004-melkpak-humes-rotje.md  005-melkpak-tegel-vlinder.md  007-gootsteen-ontstopper.md  009-bosbranden.md  010-vuurpijl.md  011-suiker.md  012-balon.md
vragen/007-ballon/: 001-verbonden.md  002-vuur.md
vragen/008-kans/: 001-dobelsteen.md  002-zes-dobelstenen.md
