[package]
name = "swq"
version = "0.1.0"
authors = ["Johan Govers <johan.govers@technolution.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
latex = {path = "../latex-rs"}
scan_dir = "0.3.3"
itertools = "0.9.0"
structopt = { version = "0.3", default-features = false }